--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -24,4 +24,6 @@
     <string name="settings_button_size_s">Pequeño</string>
     <string name="settings_button_size_m">Medio</string>
     <string name="settings_button_size_l">Grande</string>
+
+    <string name="settings_button_apply_title">Solicitar</string>
 </resources>
