feat(misc.): Add button to offer me a coffee

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -26,4 +26,5 @@
     <string name="settings_button_size_l">Groß</string>
 
     <string name="settings_button_apply_title">Bewerbung</string>
+    <string name="settings_button_buymecoffee_title">Kaufen Sie mir einen Kaffee :)</string>
 </resources>
