--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -26,4 +26,5 @@
     <string name="settings_button_size_l">Grande</string>
 
     <string name="settings_button_apply_title">Applicare</string>
+    <string name="settings_button_buymecoffee_title">Offrimi un caffè :)</string>
 </resources>
