--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -12,6 +12,7 @@
     <string name="settings_button_size_placeholder">Tamaño del botón</string>
     <string name="settings_button_title_visibility">Visibilidad del título del botón</string>
     <string name="settings_button_icon_visibility">Visibilidad del icono del botón</string>
+    <string name="settings_text_resolution">La resolución nativa es :\n\t- width : %1$d\n\t- height : %2$d\nLa resolución lógica es : \n\t- width : %3$d\n\t- height : %4$d</string>
 
     <string name="settings_button_pos_x_0">Izquierda</string>
     <string name="settings_button_pos_x_50">Centrado</string>
