--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,10 +8,11 @@
     <string name="settings_url_field_placeholder">URL</string>
     <string name="settings_button_x_pos_placeholder">Position horizontale du bouton</string>
     <string name="settings_button_y_pos_placeholder">Position verticale du bouton</string>
-    <string name="settings_button_oppacity_placeholder">Opacity du bouton</string>
+    <string name="settings_button_oppacity_placeholder">Opacité du bouton</string>
     <string name="settings_button_size_placeholder">Taille du boutton</string>
     <string name="settings_button_title_visibility">Visibilité du titre du bouton</string>
     <string name="settings_button_icon_visibility">Visibilité de l\'icône du bouton</string>
+    <string name="settings_text_resolution">Résolution native : \n\t- width : %1$d\n\t- height : %2$d\nRésolution logique : \n\t- width : %3$d\n\t- height : %4$d</string>
 
     <string name="settings_button_pos_x_0">Gauche</string>
     <string name="settings_button_pos_x_50">Centré</string>
